[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2520r-neurosymbolic-hw"
version = "0.1.0"
description = "Homework repo for CS2520R Neurosymbolic Programming"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["cs2520r_hw*"]
